gdb/top.h
@@ -191,6 +191,12 @@ extern struct cleanup *make_delete_ui_cleanup (struct ui *ui);
 /* Cleanup that restores the current UI.  */
 extern void restore_ui_cleanup (void *data);
 
+/* Register the UI's input file descriptor in the event loop.  */
+extern void ui_register_input_event_handler (struct ui *ui);
+
+/* Unregister the UI's input file descriptor from the event loop.  */
+extern void ui_unregister_input_event_handler (struct ui *ui);
+
 /* From top.c.  */
 extern char *saved_command_line;
 extern int in_user_command;
